Fix logo scaling on small viewports

--- a/docs/static/less/pouchdb/logo.less
+++ b/docs/static/less/pouchdb/logo.less
@@ -11,7 +11,7 @@
     width: 100%;
     margin-top: -@logo-img-height*.2;
     background-image: url(@logo-img);
-    background-size: 100%;
+    background-size: 100% @logo-img-height;
   }
   .logo-type {
     margin-left: 8px;
